<resources>
    <string name="app_name">BeeNote</string>
    <string name="registrar_button_registrar">Regístrate</string>
    <string name="registrar_hint_password">Contraseña</string>
    <string name="registrar_hint_password2">Repita contraseña</string>
    <string name="registrar_text_aceptar_terminos">He leído y acepto los</string>
    <string name="registrar_text_terminos">terminos y condiciones de uso</string>
    <string name="registrar_button_iniciar">Iniciar sesión</string>
    <string name="registrar_text_pregunta">¿Ya tienes cuenta?</string>
    <string name="registrar_text_registrar">Regístrate</string>
    <string name="registrar_text_correo">Correo</string>
    <string name="registrar_text_contrsenya">Contraseña</string>
    <string name="registrar_hint_email">ejemplo@gmail.com</string>

    <string name="login_text_email"> "@"gmail.com</string>
    <string name="login_hint_user">Usuario</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_button_iniciar">Iniciar sesión</string>
    <string name="login_button_registrar">Regístrate</string>
    <string name="login_text_cuenta">¿No tienes cuenta?</string>

    <string name="perfil_text_name">nombre</string>
    <string name="perfil_text_username">nombre usaurio</string>
    <string name="perfil_text_email">correo</string>
    <string name="perfil_hint_estudios">Estudios</string>
    <string name="perfil_hint_telefono">Teléfono móvil</string>
    <string name="perfil_button_guardar">Guardar</string>
    <string name="perfil_button_editar">Editar</string>
    <string name="perfil_text_nacimiento">Nacimiento</string>
    <string name="perfil_text_estudios">Estudios</string>
    <string name="perfil_text_telefon">Teléfono móvil</string>

    <string name="menuPrincipal_text_examen">Examen de Matematicas</string>
    <string name="menuPrincipal_button_perfil">Perfil</string>
    <string name="menuPrincipal_button_cerrar">Cerrar Sesion</string>
    <string name="menuPrincipal_button_grupos">Grupos</string>
    <string name="menuPrincipal_button_notas">Asignaturas</string>
    <string name="menuPrincipal_button_horario">Horario</string>
    <string name="menuPrincipal_button_tareas">Tareas</string>

    <string name="Calendar_menu_Editar">Editar Evento</string>
    <string name="Calendar_menu_Nuevo">Nuevo Evento</string>
    <string name="Calendar_menu_Eliminar">Eliminar Evento</string>

    <string name="terminos_text_condiciones">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="toolbar_text_beenote">BeeNote</string>

    <string name="toolbarInicio_text_beenote">BeeNote</string>

    <string name="header_text_user">Usuario</string>
    <string name="header_text_nombre">Nombre</string>
    <string name="header_text_estudio">Estudios</string>

    <string name="navmenu_text_menu">Menu Principal</string>
    <string name="navmenu_text_perfil">Perfil</string>
    <string name="navmenu_text_notas">Asignaturas</string>
    <string name="navmenu_text_horario">Horario</string>
    <string name="navmenu_text_calendario">Calendario</string>
    <string name="navmenu_text_grupos">Grupos</string>
    <string name="navmenu_text_tareas">Tareas</string>

    <string name="ajustesMenu_text_cerrarSesion">Cerrar Sesión</string>

    <string name="confirmacio_borrar_event">¿Estas seguro de eliminar el evento?</string>
    <string name="porcentage_nota">Porcentage de la nota</string>
    <string name="tarea_grupo">Tarea en grupo</string>
    <string name="tipo_tarea">Tipo de tarea</string>
    <string name="escoger_asignatura">Escoger asignatura</string>
    <string name="titulo_evento">Titulo del evento</string>
    <string name="hora_evento">Seleccionar hora</string>
    <string name="data_event">Fecha del Evento</string>
    <string name="_si">SI</string>
    <string name="_no">NO</string>
    <string name="aula_evento">Aula de la prueba</string>
    <string name="descripcion_evento">Descripción del evento</string>
    <string name="hora_">Hora</string>
    <string name="evento_nuevo">Nuevo Evento</string>
    <string name="evento_editar">Editar Evento</string>
    <string name="evento_guardar">Guardar Evento</string>
    <string name="evento_borrar">Eliminar Evento</string>
    <string name="texto_estas_Seguro">¿Estás seguro de eliminar el evento seleccionado?</string>
    <string name="a_adir_grupo">Añadir grupo</string>
    <string name="buscar_tarea">Buscar tarea</string>
    <string name="unirse_en_una_tarea">Unirse en una tarea</string>
    <string name="a_adir_tarea">Añadir tarea</string>
    <string name="descripci_n">Descripción</string>
    <string name="buscar">Buscar</string>


</resources>
