<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_group">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/menu"
            android:title="@string/navmenu_text_menu" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/user_nav"
            android:title="@string/navmenu_text_perfil" />
        <item
            android:id="@+id/nav_notas"
            android:icon="@drawable/courseicon"
            android:title="@string/navmenu_text_notas" />
        <item
            android:id="@+id/nav_horario"
            android:icon="@drawable/time_nav"
            android:title="@string/navmenu_text_horario" />
        <item
            android:id="@+id/nav_grupos"
            android:icon="@drawable/briefcase_nav"
            android:title="@string/navmenu_text_grupos" />
        <item
            android:id="@+id/nav_añadirgrupo"
            android:title="@string/a_adir_tarea"
            android:icon="@drawable/ic_add"
            android:visible="false"/>
    </group>
</menu>