<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/colorBeNote"
    android:orientation="vertical"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/avatar" />

    <TextView
        android:id="@+id/toolbar_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img"
        android:text="@string/header_text_user"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/toolbar_Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img"
        android:layout_below="@id/toolbar_username"
        android:text="@string/header_text_nombre"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/toolbar_estudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img"
        android:layout_below="@id/toolbar_Nombre"
        android:text="@string/header_text_estudio"
        android:layout_marginBottom="5dp"/>

</RelativeLayout>