<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFons"
    android:orientation="vertical"
    tools:context=".Dialog."
    tools:ignore="MissingDefaultResource">


        <ImageView
            android:layout_width="391dp"
            android:layout_height="52dp"
            android:layout_marginTop="145dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/btn_redondo_black" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/evento_borrar"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tw_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/data_event"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:background="@color/calendariEvents_popup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tw_data"
            app:layout_constraintVertical_bias="0.128">

                <Button
                    android:id="@+id/btn_si"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:layout_marginLeft="200dp"
                    android:text="@string/_si" />

                <Button
                    android:id="@+id/btn_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_no"
                    android:layout_marginTop="120dp"
                    android:layout_marginLeft="55dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/texto_estas_Seguro"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="10dp"/>


        </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>