<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFons"
    android:orientation="vertical"
    tools:context=".Dialog."
    tools:ignore="MissingDefaultResource">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <ImageView
                    android:layout_width="391dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="35dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/btn_redondo_black" />
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/evento_editar"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tw_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/data_event"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <EditText
                    android:id="@+id/dialog_Event_Titulo"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="40dp"
                    android:autofillHints="@string/titulo_evento"
                    android:background="@color/calendariEvents_popup"
                    android:ems="10"
                    android:hint="@string/titulo_evento"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.293"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tw_data" />

                <Spinner
                    android:id="@+id/spinner_assignatura"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/calendariEvents_popup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.291"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner_tasca" />

                <Spinner
                    android:id="@+id/spinner_tasca"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="15dp"
                    android:background="@color/calendariEvents_popup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.291"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dialog_Event_Titulo" />


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="350dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/calendariEvents_popup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.288"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout_hora">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/grup"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="18dp"/>
                        <TextView
                            android:id="@+id/tw_tarea_engrupo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/tarea_grupo"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_si_grup"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/_si" />

                        <Button
                            android:id="@+id/btn_no_grup"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/_no" />
                </LinearLayout>


                <EditText
                    android:id="@+id/et_nota"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/calendariEvents_popup"
                    android:hint="@string/porcentage_nota"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.573"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_aula" />

                <LinearLayout
                    android:id="@+id/linearLayout_hora"
                    android:layout_width="350dp"
                    android:layout_height="85dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/calendariEvents_popup"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.459"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner_assignatura">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:id="@+id/imagen_hora"
                            android:layout_marginTop="18dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/horari"
                            />
                        <TextView
                            android:id="@+id/tw_hora"
                            android:layout_width="70dp"
                            android:layout_height="30dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/hora_"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_hora"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="18dp"
                            android:layout_marginBottom="15dp"
                            android:text="@string/hora_evento"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.303"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/spinner_tasca" />

                </LinearLayout>

                <EditText
                    android:id="@+id/et_aula"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/calendariEvents_popup"
                    android:hint="@string/aula_evento"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.475"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <EditText
                    android:id="@+id/et_descripción"
                    android:layout_width="350dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/calendariEvents_popup"
                    android:hint="@string/descripcion_evento"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.209"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_nota" />

                <Button
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/evento_guardar"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginLeft="105dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_descripción" />

        </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>