<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/MenuPrincipal_Grupos"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="92dp"
            android:background="@drawable/briefcase"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/menuPrincipal_button_perfil"
            android:textColor="@android:color/black"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@+id/MenuPrincipal_PerfilUsuario"
            app:layout_constraintStart_toStartOf="@+id/MenuPrincipal_PerfilUsuario"
            app:layout_constraintTop_toBottomOf="@+id/MenuPrincipal_PerfilUsuario" />


        <Button
            android:id="@+id/MenuPrincipal_PerfilUsuario"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="316dp"
            android:layout_marginTop="92dp"
            android:background="@drawable/user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/menuPrincipal_button_horario"
            android:textColor="@android:color/black"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@+id/MenuPrincipal_Horari"
            app:layout_constraintStart_toStartOf="@+id/MenuPrincipal_Horari"
            app:layout_constraintTop_toBottomOf="@+id/MenuPrincipal_Horari" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/menuPrincipal_button_notas"
            android:textColor="@android:color/black"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@+id/MenuScrolling_Notes"
            app:layout_constraintStart_toStartOf="@+id/MenuScrolling_Notes"
            app:layout_constraintTop_toBottomOf="@+id/MenuScrolling_Notes" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/menuPrincipal_button_grupos"
            android:textColor="@android:color/black"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@+id/MenuPrincipal_Grupos"
            app:layout_constraintStart_toStartOf="@+id/MenuPrincipal_Grupos"
            app:layout_constraintTop_toBottomOf="@+id/MenuPrincipal_Grupos" />

        <Button
            android:id="@+id/MenuScrolling_Notes"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="132dp"
            android:layout_marginTop="92dp"
            android:background="@drawable/notebook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:layout_marginTop="72dp"
            android:layout_weight="1"
            app:eventsEnabled="true"
            app:headerColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:selectionColor="@color/colorBeNote"
            app:todayLabelColor="@color/colorBeNote"
            app:type="one_day_picker">

        </com.applandeo.materialcalendarview.CalendarView>

        <TextView
            android:id="@+id/menu_scrolling_text_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#F44336"
            app:layout_constraintBottom_toTopOf="@+id/calendarView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/MenuPrincipal_Horari"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="228dp"
            android:layout_marginTop="92dp"
            android:background="@drawable/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>